# lbrxServer

./: .dockerignore  .env.example  .gitignore  20250706-dragon-to-mgbook16-battle-report-10.md  20250706-dragon-to-mgbook16-battle-report-15.md  20250706-dragon-to-mgbook16-battle-report-20.md  20250706-dragon-to-mgbook16-battle-report-25.md  20250706-dragon-to-mgbook16-battle-report-30.md  20250706-dragon-to-mgbook16-battle-report-35.md  20250706-dragon-to-mgbook16-battle-report-40.md  20250706-dragon-to-mgbook16-battle-report-45.md  20250706-dragon-to-mgbook16-battle-report-5.md  20250706-dragon-to-mgbook16-battle-report-50.md  20250706-dragon-to-mgbook16-battle-report-55.md  20250706-dragon-to-mgbook16-battle-report-60.md  20250706-dragon-to-mgbook16-battle-report-65.md  20250706-dragon-to-mgbook16-battle-report-70.md  20250706-dragon-to-mgbook16-battle-report-75.md  20250706-dragon-to-mgbook16-battle-report-80.md  20250706-dragon-to-mgbook16-battle-report-85.md  20250706-dragon-to-mgbook16-battle-report-90.md  20250706-dragon-to-mgbook16-battle-report-95.md  20250706-dragon-to-mgbook16-entering-battle-urgent.md  20250706-dragon-to-mgbook16-final-battle-report-urgent.md  20250706-dragon-to-mgbook16-frontier-massacre-complete-report-urgent.md  20250706-dragon-to-mgbook16-frontier-test-crash-analysis-urgent.md  20250706-dragon-to-mgbook16-llm-recovered-wave1-urgent.md  20250706-dragon-to-mgbook16-llm-restarted-battle-continues-urgent.md  20250706-dragon-to-mgbook16-llm-server-up-sessions-ready-urgent.md  20250706-dragon-to-mgbook16-metal-fix-deployed-urgent.md  20250706-dragon-to-mgbook16-metal-fix-working-urgent.md  20250706-dragon-to-mgbook16-request-audio-assault-urgent.md  20250706-dragon-to-mgbook16-supervisor-pipeline-urgent.md  20250706-dragon-to-mgbook16-survivors-report-urgent.md  20250706-dragon-to-mgbook16-three-body-test-analysis-urgent.md  20250706-dragon-to-mgbook16-victory-confirmation-urgent.md  20250706-dragon-to-mgbook16-wave2-metal-crash-identified-urgent.md  20250706-dragon-to-mgbook16-wrong-endpoint-urgent.md  20250707-dragon-to-monika-llm-restored-urgent.md  20250707-dragon-to-monika-llm-running-final-urgent.md  (+35 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-test.yml  semgrep.yml
docs/: API.md  ARCHITECTURE.md  ROADMAP.md
model_templates/: README.md
scripts/: PATH_FIXES_SUMMARY.md  manage.sh  start_server.sh  start_supervisor.sh
src/: __init__.py  auth.py  available_models_correct_raw.txt  available_models_raw.txt  base_response.txt  config.py  llm_server_test_report.md  main.py  middleware.py  model1_full_response.txt  model2_response.txt  model3_response.txt  model4_response.txt  model5_response.txt  model_config.py  model_manager.py  model_preloader.py  model_router.py  models.py  models_no_auth_raw.txt  models_no_v1.txt  nemotron_no_auth.json  nemotron_verbose.txt  test_model_resilience.py
src/endpoints/: chat.py  (+5 more)
tests/: __init__.py  conftest.py  test_config.py  test_e2e.py  test_health.py  test_model_router.py  test_models.py
(+26 files in other folders)
